make sure the textlayer is also visible in the "Goldilock" PDF file which is attached to issue stephanrauh/ngx-extended-pdf-viewer#2277

--- a/src/app/extended-pdf-viewer/textlayer/textlayer.component.css
+++ b/src/app/extended-pdf-viewer/textlayer/textlayer.component.css
@@ -3,11 +3,12 @@
   border-radius: 8px;
 }
 
-ngx-extended-pdf-viewer div.show-text-layer > span {
-  color: unset;
+ngx-extended-pdf-viewer div.show-text-layer > span,
+ngx-extended-pdf-viewer div.show-text-layer > span > * {
+  color: #0000C080;
 }
 
 .long-word {
-  background-color: blue;
+  background-color: rgba(0, 0, 255, 0.555);
   display: inline;
 }
